--- a/src/pages/academia/index.astro
+++ b/src/pages/academia/index.astro
@@ -13,17 +13,32 @@ import { getProject } from '@/projects'
 
         <h2>Thesis and Reports</h2>
         <div class="notebook-grid">
-            <a href="/academia/geometria-2" class="notebook-item larger" style="--notebook-color: rgb(224, 178, 255);">
+            <a
+                href="https://git.phc.dm.unipi.it/aziis98/tesi-triennale/raw/branch/main/out/tesi-triennale.pdf"
+                target="_blank"
+                class="notebook-item larger"
+                style="--notebook-color: rgb(224, 178, 255);"
+            >
                 <div class="title">Bachelor Thesis</div>
                 <div class="info">2024/2025</div>
                 <div class="info">Tesi Triennale</div>
             </a>
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: rgb(78, 212, 89);">
+            <a
+                href="https://raw.githubusercontent.com/aziis98/kauffman-polynomial/main/report/kauffman-polynomial-report.pdf"
+                target="_blank"
+                class="notebook-item"
+                style="--notebook-color: rgb(78, 212, 89);"
+            >
                 <div class="title">Kauffman Polynomial Implementation</div>
                 <div class="info">June 2025</div>
                 <div class="info">Computational Laboratory Report</div>
             </a>
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: rgb(78, 136, 212);">
+            <a
+                href="https://raw.githubusercontent.com/aziis98/arnoldi-distribuito/next/typst-report/main.pdf"
+                target="_blank"
+                class="notebook-item"
+                style="--notebook-color: rgb(78, 136, 212);"
+            >
                 <div class="title">Arnoldi Iteration</div>
                 <div class="info">April 2025</div>
                 <div class="info">Scientific Computing Report</div>
@@ -38,19 +53,27 @@ import { getProject } from '@/projects'
             </p>
         </div>
         <div class="notebook-grid">
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: #808081;">
-                <div class="title">Geometria 2</div>
-                <div class="info">2019/2020</div>
+            <a href="/academia/ricerca-operativa" class="notebook-item" style="--notebook-color: rgb(255, 213, 27);">
+                <div class="title">Ricerca Operativa</div>
+                <div class="info">2023/2024</div>
             </a>
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: green;">
-                <div class="title">Geometria 2</div>
-                <div class="info">2019/2020</div>
+            <a href="/academia/asd" class="notebook-item" style="--notebook-color: rgb(255, 183, 27);">
+                <div class="title">Algoritmi e Strutture Dati</div>
+                <div class="info">2023/2024</div>
             </a>
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: rgb(255, 208, 0);">
-                <div class="title">Geometria 2</div>
-                <div class="info">2019/2020</div>
+            <a href="/academia/meccanica-razionale" class="notebook-item" style="--notebook-color: rgb(148, 101, 70);">
+                <div class="title">Meccanica Razionale</div>
+                <div class="info">2023/2024</div>
             </a>
-            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: #6b3f1b;">
+            <a href="/academia/analisi-3" class="notebook-item" style="--notebook-color: rgb(255, 131, 59);">
+                <div class="title">Analisi 3</div>
+                <div class="info">2021/2022</div>
+            </a>
+            <a href="/academia/logica" class="notebook-item" style="--notebook-color: rgb(255, 77, 77);">
+                <div class="title">Logica 2</div>
+                <div class="info">2020/2021</div>
+            </a>
+            <a href="/academia/geometria-2" class="notebook-item" style="--notebook-color: rgb(55, 167, 33);">
                 <div class="title">Geometria 2</div>
                 <div class="info">2019/2020</div>
             </a>
